# pandas-utilities

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pipeline.yaml  tests.yaml
pdutils/: __init__.py  _eq.py  _merge.py  eq.py  merge.py
tests/: test_merge.py  test_pandas_utils.py
