[metadata]
name = pandas-utils
version = __version__
description = More or less useful utilities for pandas
long_description = file: README.md
long_description_content_type = text/markdown
author = Kristoffer Thom
author_email = dontgetcaughtt@outlook.com
url = https://github.com/dontgetcaughtt/pd-utils
project_urls =
    Documentation = https://github.com/dontgetcaughtt/pd-utils
    Source = https://github.com/dontgetcaughtt/pd-utils
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
python_requires = >=3.6
packages = find:
package_dir =
    = pdutils

[options.packages.find]
where = pdutils
