[metadata]
name = pandas-utils
version = 0.1.1
description = More or less useful utilities for pandas
long_description = file: README.md
long_description_content_type = text/markdown
author = Kristoffer Thom
author_email = dontgetcaughtt@outlook.com
url = https://github.com/dontgetcaughtt/pd-utils
project_urls =
    Documentation = https://github.com/dontgetcaughtt/pd-utils
    Source = https://github.com/dontgetcaughtt/pd-utils
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
packages = find:

[options.packages.find]
include = pdutils
