[metadata]
name = pandasutils
version = attr: pdutils.__version__
description = More or less useful utilities for pandas
long_description = file: README.md
long_description_content_type = text/markdown
author = dontgetcaughtt
author_email = dontgetcaughtt@outlook.com
url = https://github.com/dontgetcaughtt/pd-utils
project_urls =
    Source = https://github.com/dontgetcaughtt/pd-utils
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.10
packages = find:

[options.packages.find]
include = pdutils
